2019-06-06  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/testSimpleTests.R: Tweaks for Travis
	* inst/tinytest/testValidate.R: Idem
	* inst/tinytest/test_gh_issue_5.R: Idem

2019-06-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp: Added removeFormats() (also in TimeFormats)
	* src/RcppExports.cpp: Updated
	* R/RcppExports.R: Updated
	* man/getFornats.Rd: Updated, added removeFormats help
	* NAMESPACE: Export removeFormats()

	* inst/tinytest/testUtilities.R: Added removeFormats() and format
	comparison tests

2019-06-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/tinytest/testUtilities.R: Do not add format as it persists
	across tests -- with thanks to Mark van der Loo for spotting this

	* tests/tinytest.R: Depend on tinytest 0.9.4 (on CRAN "soon")

	* src/anytime.cpp: Explicitly unset TZ variable in Rstrptime

2019-06-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_gh_issue_12.R: From tests/test_gh_issue_12.R
	* inst/tinytest/test_gh_issue_33.R: From tests/test_gh_issue_12.R

2019-05-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/tinytest/test_gh_issue_5.R: From tests/test_gh_issue_5.R

2019-05-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/testSimpleTests.R: Converted from tests/simpleTests.R
	* inst/tinytest/testR_Format.R: Converted from tests/r_anytime.R
	* inst/tinytest/testUtilities.R: Converted from tests/utilities.R

2019-05-28  Dirk Eddelbuettel  <edd@debian.org>

        * tests/tinytest.R: New test driver using tinytest
        * DESCRIPTION (Suggests): Added tinytest
        * .travis.yml (install): Install tinytest

	* inst/tinytest/testValidate.R: Converted from tests/validate.R

2019-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/Makevars: Added to set C++11 avoiding a compiler warning
	* src/Makevars.win: Idem
