@@ -1,5 +1,8 @@
 2019-06-06  Dirk Eddelbuettel  <edd@debian.org>
 
+	* inst/tinytest/test_all_formats.R: From tests/testAllFormats.R,
+	currently inactive as remote use consistently gets failing tests
+
 	* inst/tinytest/testSimpleTests.R: Tweaks for Travis
 	* inst/tinytest/testValidate.R: Idem
 	* inst/tinytest/test_gh_issue_5.R: Idem
